# sysapi

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  sysapi.md
src/: common.rs  helpers.rs  lib.rs  main.rs  soload.rs  sysapi.rs  tests.rs  webrouter.rs
src/api/: api.rs  cell.rs  igniter.rs  mod.rs  proxy.rs  rollback.rs  snapshot.rs  status.rs  systat.rs  zfs.rs  zone.rs
src/apis/: cell.rs  igniter.rs  mod.rs  owner.rs  proxy.rs  status.rs  systat.rs  zfs.rs  zone.rs
src/benches/: kernel_kvm+procstat+uid65+sockstat.rs  kernel_kvm+procstat+uid65.rs  kernel_kvm-procstat-uid65-sockstat.rs  kernel_kvm-procstat-uid65.rs
src/common/: helpers.rs  natives.rs
src/examples/: psuid65tojson.rs
src/processors/: cells.rs  datasets.rs  mod.rs  proxies.rs  systats.rs
src/webapi/: cells.rs  datasets.rs  internals.rs  mod.rs  proxies.rs  router.rs  utils.rs
src/webapp/: router.rs
src/webapp/handle/: datasets.rs  proxies.rs  systats.rs
web/: 404.html  500.html
web/css/: style.css  style.min.css  style.min.css.map
web/static/: cell.html  cells.html  panel.html  proxies.html  proxy.html  rollback.html  snapshot.html  snapshots.html
web/static/html/: cell.html  dashboard.html  panel.html  proxies.html  proxy.html  rollback.html  snapshot.html  snapshots.html
web/static/js/: cell.js  cells.js  dashboard.js  proxies.js  proxy.js  rollback.js  snapshot.js  snapshots.js  utils.js
