[package]
name = "sysapi"
version = "0.10.4"
authors = ["Daniel (dmilith) Dettlaff <dmilith@me.com>"]
edition = "2018"


[[bin]]
name = "sysapi"
path = "src/sysapi.rs"


[lib]
name = "sysapi"
path = "src/lib.rs"
crate-type = ["cdylib", "dylib", "rlib"]




[dependencies]
gotham = "0.3"
gotham_derive = "0.3"
hyper = { version = "0.12", features = [] }

log = "0.4"
fern = { version = "0.5", features = ["colored"] }
colored = "1.6"

serde = "1"
serde_derive = "1"
serde_json = "1"

futures = "0.1"
tokio = "0.1"
mime = "0.3"

domain = "0.2"
abstract-ns = "0.4"
ns-std-threaded = "0.3"

lazy_static = "1.1"

uuid = { version = "0.6", features = ["v4"] }
rand = "0.4"
regex = "0.2"
chrono = "0.4"
glob = "0.2"
hostname = "0.1"
atomicwrites = "0.2"
systemstat = "0.1"
libc = "0.2"
libloading = "0.5"

bencher = "0.1"
